# Smoke-Fire-Detection

./: LICENSE  README.md  data-cleaning.py  data.yaml  pretrained_model.py  pyproject.toml
